--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -6,3 +6,4 @@
 @import "./components/button.scss";
 @import "./layouts/nav.scss";
 @import "./layouts/hero.scss";
+@import "./layouts/journey.scss";
