--- a/assets/style/base/_typography.scss
+++ b/assets/style/base/_typography.scss
@@ -13,6 +13,55 @@ h1 {
     @include rem(55);
     margin-bottom: 20px;
 }
+
+h2 {
+font-family: $font-001;
+@include rem(55);
+text-transform: uppercase;
+color: $color-007;
+margin-left: 100px;
+position: relative;
+width: fit-content;
+    &::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 50px;
+        background-color: rgba($color: $color-001, $alpha: 05);
+        left: -23px;
+        top: 25px;
+        z-index: -1;
+    }
+}
+
+h3 {
+    font-family: $font-001;
+    @include rem(55);
+    text-transform: capitalize;
+    position: relative;
+    width: fit-content;
+        &::after {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 50px;
+            background-color: rgba($color: $color-001, $alpha: 05);
+            left: -44px;
+            top: 25px;
+            z-index: -1;
+        }
+    }
+
+h4 {
+    font-family: $font-001;
+    color: $color-005;
+    font-size: rem(34);
+}
+h5 {
+    font-family: $font-001;
+    color: $color-004;
+    font-size: rem(34);
+}
 p {
     font-family: $font-002;
     color: $color-008;
