--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -7,3 +7,4 @@
 @import "./layouts/nav.scss";
 @import "./layouts/hero.scss";
 @import "./layouts/journey.scss";
+@import "./layouts/transition.scss"
