--- a/assets/style/layouts/_transition.scss
+++ b/assets/style/layouts/_transition.scss
@@ -1,5 +1,5 @@
-&__transition {
-    margin-top: 755px;
+.transition {
+    position: relative;
     background-image: url("../images/transition-journey.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -8,5 +8,24 @@
     p {
         color: $color-white;
         font-family: $font-001;
+    }
+    &::before {
+        content: "";
+        position : absolute;
+        width: 805px;
+        height: 425px;
+        background-image: url("../images/hill.svg");
+        left: 0;
+        bottom: 100%;
+    }
+    &::after {
+        content: "";
+        position : absolute;
+        width: 805px;
+        height: 425px;
+        background-image: url("../images/hill.svg");
+        right: 0;
+        bottom: 100%;
+        transform: rotateY(180deg);
     }
 }
