--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -246,9 +246,21 @@ a {
   content: "";
   position: absolute;
   width: 30px;
-  height: 100%;
+  height: 86%;
   background-color: #C6C09C;
-  top: 0;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 25px 25px 0 0;
+}
+.journey::before {
+  content: "";
+  position: absolute;
+  width: 340px;
+  height: 100%;
+  background-image: url("../images/flower-big.svg");
+  background-repeat: no-repeat;
+  top: 9.5%;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -263,6 +275,15 @@ a {
 .journey__content:nth-child(2n+1) {
   margin-left: 100px;
 }
+.journey__content:nth-child(2n+1) h5::after {
+  content: "";
+  position: absolute;
+  width: 200px;
+  height: 30px;
+  background-color: #C6C09C;
+  border-radius: 25px 0 0 25px;
+  left: 105%;
+}
 .journey__content:nth-child(2n) {
   margin: 50px 100px 300px auto;
 }
@@ -272,9 +293,54 @@ a {
 .journey__content:nth-child(2n) h5 {
   text-align: end;
 }
+.journey__content:nth-child(2n) h5::after {
+  content: "";
+  position: absolute;
+  width: 200px;
+  height: 30px;
+  background-color: #C6C09C;
+  border-radius: 0 25px 25px 0;
+  right: 105%;
+}
+.journey__content:last-child {
+  padding-bottom: 755px;
+}
 .journey__content h5 {
   padding: 20px 0;
+  position: relative;
 }
 .journey__content .text-green {
   font-size: 1.3125rem;
+}
+
+.transition {
+  position: relative;
+  background-image: url("../images/transition-journey.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 190px 0 515px 0;
+  text-align: center;
+}
+.transition p {
+  color: #FFFFFF;
+  font-family: "Antique olive";
+}
+.transition::before {
+  content: "";
+  position: absolute;
+  width: 805px;
+  height: 425px;
+  background-image: url("../images/hill.svg");
+  left: 0;
+  bottom: 100%;
+}
+.transition::after {
+  content: "";
+  position: absolute;
+  width: 805px;
+  height: 425px;
+  background-image: url("../images/hill.svg");
+  right: 0;
+  bottom: 100%;
+  transform: rotateY(180deg);
 }/*# sourceMappingURL=main.css.map */
