--- a/assets/style/layouts/_journey.scss
+++ b/assets/style/layouts/_journey.scss
@@ -23,11 +23,14 @@
         left: 50%;
         transform: translateX(-50%);
     }
-
-    >p {
+&__intro {
+    margin-top: -194px;
+    p {
         margin: 110px 0 215px 100px;
         max-width: 30%;
     }
+}
+
 
     &__content {
         max-width: 100%;
@@ -49,7 +52,7 @@
         }
 
         &:nth-child(2n) {
-            margin: 50px 100px 300px auto;
+            margin: 200px 100px 200px auto;
 
             h4 {
                 text-align: end;
@@ -69,10 +72,9 @@
             }
         }
 
-        &:last-child {
-            padding-bottom: 755px;
-            ;
-        }
+        // &:last-child {
+        //     margin-bottom: 755px;
+        // }
 
         h5 {
             padding: 20px 0;
@@ -82,6 +84,17 @@
 
         .text-green {
             @include rem(21);
+        }
+    }
+    .cloud {
+        position: absolute;
+        top: 0;
+        &:nth-child(2n) {
+            left: 0;
+            // padding-bottom: ;
+        }
+        &:nth-child(2n+1) {
+            right: 0;
         }
     }
 }
