--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -4,7 +4,9 @@
 @import "./base/base.scss";
 @import "./base/typography.scss";
 @import "./components/button.scss";
+@import "./components/carrousel.scss";
 @import "./layouts/nav.scss";
 @import "./layouts/hero.scss";
 @import "./layouts/journey.scss";
-@import "./layouts/transition.scss"
+@import "./layouts/transition.scss";
+@import "./layouts/experience.scss";
