--- a/assets/style/components/_button.scss
+++ b/assets/style/components/_button.scss
@@ -1,3 +1,8 @@
+button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
 .btn {
     padding: 16px 30px;
     border-radius: 50px;
