--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -107,6 +107,7 @@ h2::after {
 h3 {
   font-family: "Antique olive";
   font-size: 3.4375rem;
+  color: #FFB284;
   text-transform: capitalize;
   position: relative;
   width: -webkit-fit-content;
@@ -380,6 +381,7 @@ a {
   background-repeat: no-repeat;
   background-size: cover;
   padding: 190px 0 515px 0;
+  margin-bottom: 100px;
   text-align: center;
 }
 .transition p {
@@ -410,12 +412,35 @@ a {
   display: flex;
   margin-top: 240px;
 }
-.experience .carrousel__wrapper .carrousel {
-  width: 50%;
-}
-.experience .carrousel__wrapper .carrousel .green-btn svg path {
+.experience .carrousel__wrapper .carousel-title .carrousel .green-btn svg path {
   fill: #C6C09C;
 }
-.experience .carrousel__wrapper .carrousel .green-btn:hover svg path {
+.experience .carrousel__wrapper .carousel-title .carrousel .green-btn:hover svg path {
   fill: #FFB284;
+}
+.experience .carrousel__wrapper .carousel-title .carrousel-integration {
+  position: relative;
+}
+.experience .carrousel__wrapper .carousel-title .carrousel-integration > svg {
+  position: absolute;
+  bottom: 165px;
+  right: 0;
+  z-index: -1;
+  height: 100%;
+}
+.experience .carrousel__wrapper .carousel-title .carrousel-maquette {
+  position: relative;
+}
+.experience .carrousel__wrapper .carousel-title .carrousel-maquette > svg {
+  position: absolute;
+  top: 289px;
+  left: 0;
+  z-index: -1;
+  height: 100%;
+}
+.experience .carrousel__wrapper .carousel-title h3 {
+  margin: 61px auto 0;
+}
+.experience .carrousel__wrapper .carousel-title h3.maquette-title {
+  color: #E79796;
 }/*# sourceMappingURL=main.css.map */
