--- a/assets/style/utils/_variables.scss
+++ b/assets/style/utils/_variables.scss
@@ -1,12 +1,13 @@
-$color-white: #FFFFFF;
-$color-001: #FAE7E3;
-$color-002: #F7DAD5;
-$color-003: #F5CEC7;
-$color-004: #E79796;
-$color-005: #FFB284;
-$color-006: #FFC98B;
-$color-007: #C6C09C;
-$color-008: #443E1D;
+$color-white: #ffffff;
+$color-001: #fae7e3;
+$color-002: #f7dad5;
+$color-003: #f5cec7;
+$color-004: #e79796;
+$color-005: #ffb284;
+$color-006: #ffc98b;
+$color-007: #c6c09c;
+$color-008: #443e1d;
 
 $font-001: "Antique olive";
 $font-002: "Rage";
+$font-002: "Montserrat";
