--- a/assets/style/base/_typography.scss
+++ b/assets/style/base/_typography.scss
@@ -8,6 +8,12 @@
   src: url("./font/rage/RAGE.TTF") format("truetype");
 }
 
+@font-face {
+  font-family: "Montserrat";
+  src: url("./font/montserrat/Monserrat-VariableFont_wght.ttf")
+    format("truetype");
+}
+
 h1 {
   color: $color-004;
   @include rem(55);
@@ -62,6 +68,11 @@ h5 {
   font-family: $font-001;
   color: $color-004;
   font-size: rem(34);
+}
+h6 {
+  font-family: "Montserrat";
+  color: $color-white;
+  font-size: rem(55);
 }
 p {
   font-family: $font-002;
