--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -10,3 +10,4 @@
 @import "./layouts/journey.scss";
 @import "./layouts/transition.scss";
 @import "./layouts/experience.scss";
+@import "./layouts/resume.scss";
